# static-api-rs

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  errors.rs  handlers.rs  html.rs  main.rs  utils.rs
