[package]
name = "static-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
anyhow = "1"
# salvo = { version = "0.44.1", features = ["anyhow"] }
salvo = { version = "0.63", features = ["anyhow"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
