[package]
name = "static-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2"
rand = "0.9"
clap = "4.5"
dirs = "6"
salvo = { version = "0.76", features = ["affix-state", "cors"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
serde = "1"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
